--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -16,6 +16,7 @@
   --yellow-color: #faff00;
   --sub-color: #484848;
   --third-color: #222;
+  --white-color: #fff;
 }
 
 .container {
@@ -36,9 +37,38 @@ a {
 } */
 
 body {
+  font-family: "Inter", sans-serif;
   background-image: url("../images/banner-bg.svg");
   background-repeat: no-repeat;
   background-size: 100%;
+}
+
+.btn {
+  display: inline-block;
+  background-color: var(--secondary-color);
+  color: var(--white-color);
+  border: none;
+  outline: none;
+}
+
+.btn:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.btn__sm {
+  padding: 13px 26px;
+  min-width: 144px;
+}
+
+.btn__lg {
+  padding: 26px;
+  min-width: 298px;
+  font-size: 21px;
+}
+
+.btn--rounded {
+  border-radius: 8px;
 }
 
 /* Begin: Header */
@@ -51,13 +81,41 @@ header {
   /* position: relative; */
 }
 
+.logo {
+  font-size: 23px;
+  font-weight: 600;
+  color: var(--dark-color);
+}
+
+.logo:hover {
+  opacity: 0.6;
+}
+
 nav ul {
   display: flex;
   list-style: none;
+  min-width: 405px;
+  justify-content: space-between;
+}
+
+nav ul li {
+  width: 25%;
 }
 
 nav ul a {
   padding: 8px 15px;
+  /* display: inline-block;
+  width: 102px; */
+  margin-right: 8px;
+  transition: all 0.3s ease;
+}
+
+nav ul li:last-child a {
+  margin-right: 0;
+}
+
+nav ul a:hover {
+  font-weight: 600;
 }
 
 .action-group ul {
@@ -66,20 +124,32 @@ nav ul a {
   align-items: center;
   gap: 29px;
 }
+
+.action-group ul li:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
 /* End: Header */
 
 /* Begin: Hero */
 .hero-banner {
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .hero-banner__img {
   display: block;
   width: 100%;
   position: absolute;
-  top: -50%;
+  top: -31%;
   left: 0;
+}
+
+.hero-banner__content {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: space-between;
 }
 
 .hero-banner__tag {
@@ -95,7 +165,13 @@ nav ul a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 30px;
 }
+
+.hero-banner__tag b {
+  font-size: 30px;
+}
+
 .order {
   background-color: #0e1828;
   color: #fff;
@@ -103,5 +179,65 @@ nav ul a {
 .hero-banner__content_left {
   display: block;
   margin: 0;
+  padding-top: 17px;
+  width: 35.2%;
+}
+
+.hero-banner__content_left .title {
+  font-size: 14px;
+  margin-bottom: 24px;
+}
+
+.hero-banner__content_left h1 {
+  font-size: 68px;
+  color: var(--secondary-color);
+  line-height: 1.1;
+  text-transform: uppercase;
+  margin-bottom: 26px;
+}
+
+.hero-banner__content_left .content {
+  color: var(--primary-color);
+  line-height: 1.57;
+  margin-bottom: 50px;
+}
+
+.hero-banner__content_left .price {
+  font-size: 27px;
+  font-weight: 700;
+  display: flex;
+  justify-content: space-between;
+  max-width: 268px;
+  margin-bottom: 50px;
+}
+
+.hero-banner__content_right {
+  padding-top: 76px;
+  width: 24.1%;
+}
+
+.hero-banner__content_right > div {
+  padding: 28px 24px;
+}
+
+.hero-banner__content_right > div:first-child {
+  padding-top: 0;
+}
+
+.hero-banner__content_right > div.active {
+  background-color: var(--white-color);
+  box-shadow: 0px 46px 80px 0px rgba(0, 0, 0, 0.12),
+    0px 17.719px 25.481px 0px rgba(0, 0, 0, 0.07),
+    0px 3.748px 6.519px 0px rgba(0, 0, 0, 0.05);
+}
+
+.hero-banner__content_right h3 {
+  font-size: 20px;
+  color: var(--black-color);
+  margin-bottom: 8px;
+}
+
+.hero-banner__content_right h3 + p {
+  color: var(--primary-color);
 }
 /* End: Hero */
