--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -71,6 +71,18 @@ body {
   border-radius: 8px;
 }
 
+.block-box {
+  display: flex;
+}
+
+.block-box > div {
+  flex: 1;
+}
+
+.block-box__right {
+  flex-direction: row-reverse;
+}
+
 /* Begin: Header */
 header {
   display: flex;
@@ -134,6 +146,8 @@ nav ul a:hover {
 /* Begin: Hero */
 .hero-banner {
   position: relative;
+  overflow-y: hidden;
+  padding: 66px 0;
   /* overflow: hidden; */
 }
 
@@ -141,7 +155,7 @@ nav ul a:hover {
   display: block;
   width: 100%;
   position: absolute;
-  top: -31%;
+  top: -16%;
   left: 0;
 }
 
@@ -241,3 +255,30 @@ nav ul a:hover {
   color: var(--primary-color);
 }
 /* End: Hero */
+
+.dots {
+  position: absolute;
+  bottom: 30px;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.dots > span {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  border-radius: 999px;
+  border: 1px solid var(--black-color);
+}
+
+.dots > span.active {
+  background-color: var(--black-color);
+}
+
+.footer-link {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+}
