--- a/responsive.css
+++ b/responsive.css
@@ -78,3 +78,39 @@ header {
     display: none;
   } */
 }
+
+li {
+  animation: shake 1s linear infinite;
+}
+
+@keyframes test {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(50px);
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes shake {
+    0%,
+    100% {
+        translate: 0;
+    }
+    25%,
+    75% {
+        translate: 4px;
+    }
+    50% {
+        translate: -4px;
+    }
+}
